<resources>
    <string name="app_name">HomeWorkRegistrationForm</string>
    <string name="profile_info">Profile Info</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
</resources>